# weather-cli

./: .gitignore  .markdownlint.jsonc  Cargo.toml  LESSONS.md  LICENSE  README.md  chapter-00.md  chapter-01.md  chapter-02.md  linkedin-article.md  linkedin-post.md
src/: main.rs
